--- a/index.html
+++ b/index.html
@@ -1,13 +1,88 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tracking NexusMU</title>
+    <title>NexusMU - Tracking</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <!-- partial:index.partial.html -->
+    <!DOCTYPE html>
+
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>NexusMU - Tracking</title>
+        <link rel="stylesheet" href="./style.css" />
+      </head>
+
+      <body>
+        <!-- partial:index.partial.html -->
+
+        <section>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+          <span></span> <span></span> <span></span> <span></span> <span></span>
+
+          <div class="signin" id="app"></div>
+          <script type="module" src="/src/main.ts"></script>
+        </section>
+        <!-- partial -->
+      </body>
+    </html>
+    <!-- partial -->
   </body>
 </html>
