--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NexusMU - Tracking</title>
+    <title>Real-time Clock</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -16,7 +16,7 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>NexusMU - Tracking</title>
+        <title>Real-time Clock</title>
         <link rel="stylesheet" href="./style.css" />
       </head>
 
@@ -76,7 +76,6 @@
           <span></span> <span></span> <span></span> <span></span> <span></span>
           <span></span> <span></span> <span></span> <span></span> <span></span>
           <span></span> <span></span> <span></span> <span></span> <span></span>
-
           <div class="signin" id="app"></div>
           <script type="module" src="/src/main.ts"></script>
         </section>
